Fix login and views, create/delete posts

--- a/Main/views/blog.handlebars
+++ b/Main/views/blog.handlebars
@@ -1,7 +1,8 @@
+(#each)
 <div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
+  <h2>hello</h2>
+  <p>hi</p>
+  <p>hi</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
     <span for="img" aria-label="money">💲</span>
