--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -1,24 +1,23 @@
 <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
+<div class="flex flex-col">
+{{#each blogs as |blog| }}
+
+<div class="row mb-4 project border-solid border-4 ">
   <div class="col-md-5">
-    <h2>
+    <div class="text-3xl text-dark w-full border-bottom-4 border-solid border-2">
+    <h2>{{blog.title}}</h2>
+    </div>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
       {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
+      <a href="/blogs/{{blogs.id}}">{{blog.title}}</a>
     </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
+    <p>{{blog.blog_content}}</p>
+    <p>Created by: {{blog.user.username}} on {{format_date blog.createdAt}}</p>
+        <p>
+      {{comment.comment_content}}
     </p>
   </div>
 </div>
+
 {{/each}}
+</div>
