--- a/Main/views/layouts/main.handlebars
+++ b/Main/views/layouts/main.handlebars
@@ -4,25 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+      <h1 class="text-4xl">
+        <span role="img" aria-label="pc">💻</span>
+        <a href="/">Tech Blog! {{username}}</a>
       </h1>
-      <nav>
+      <nav class="justify-left">
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a href="/dashboard">Dashboard</a> |
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">Login</a>
         {{/if}}
       </nav>
     </header>
@@ -40,5 +41,5 @@
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
-
+<script src="https://cdn.tailwindcss.com"></script>
 </html>
