--- a/Main/views/login.handlebars
+++ b/Main/views/login.handlebars
@@ -4,15 +4,15 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="usernamelogin">Username:</label>
+        <input class="form-input" type="text" id="usernamelogin" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <label for="passwordlogin">Password:</label>
+        <input class="form-input" type="password" id="passwordlogin" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button id="login" class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
   </div>
@@ -21,22 +21,17 @@
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
+        <label for="name-signup">Username:</label>
         <input class="form-input" type="text" id="name-signup" />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
+        <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button id="signup" class="btn btn-primary" type="submit">Signup</button>
       </div>
     </form>
   </div>
 </div>
-
-<script src="./js/login.js"></script>
+<script src="./js/login.js" type="text/javascript"></script>
