--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -1,5 +1,7 @@
 <!-- Loop over each object in the projects array -->
 <div class="flex flex-col">
+  {{#if blogs.length}}
+  <h1 class="text-center text-4xl pb-6">Blog Posts: </h1>
 {{#each blogs as |blog| }}
 
 <div class="row mb-4 project border-solid border-4 ">
@@ -9,7 +11,7 @@
     </div>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
       {{{get_emoji}}}
-      <a href="/blogs/{{blogs.id}}">{{blog.title}}</a>
+      <a href="/blogs/{{blog.id}}">{{blog.title}}</a>
     </h2>
     <p>{{blog.blog_content}}</p>
     <p>Created by: {{blog.user.username}} on {{format_date blog.createdAt}}</p>
@@ -20,4 +22,5 @@
 </div>
 
 {{/each}}
+{{/if}}
 </div>
