--- a/Main/views/layouts/main.handlebars
+++ b/Main/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1 class="text-4xl">
+      <h1 class="py-4 text-4xl">
         <span role="img" aria-label="pc">💻</span>
         <a href="/">Tech Blog! {{username}}</a>
       </h1>
@@ -23,7 +23,9 @@
         <a href="/dashboard">Dashboard</a> |
         <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">Login</a>
+        <a class="pr-2" href="/">Home</a>
+        <a class="pr-2" href="/login">Login</a>
+        <a href="/signup">Sign Up</a>
         {{/if}}
       </nav>
     </header>
