--- a/Main/views/login.handlebars
+++ b/Main/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h2>Login</h2>
+    <h2 class="text-2xl">Login</h2>
 
     <form class="form login-form">
       <div class="form-group">
@@ -13,25 +13,10 @@
       </div>
       <div class="form-group">
         <button id="login" class="btn btn-primary" type="submit">login</button>
+        <a class="align-right" href="/signup">Create account</a>
       </div>
     </form>
   </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
 
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">Username:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button id="signup" class="btn btn-primary" type="submit">Signup</button>
-      </div>
-    </form>
-  </div>
 </div>
 <script src="./js/login.js" type="text/javascript"></script>
